--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,1 @@
-body {
-  padding: 0;
-  margin: 0;
-}
-
-.form-group {
-  display: grid;
-
-  label {
-    font-size: smaller;
-  }
-}
+/* Remove old styles as they're now handled by Tailwind */
